src/nika/net_env/k8s_lab/shared/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: word-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: weather-ns
