src/nika/net_env/k8s_lab/shared/deploy_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: word-dply
  namespace: word-ns
spec:
  selector:
    matchLabels:
      app: word
  replicas: 1
  template:
    metadata:
      labels:
        app: word
    spec:
      containers:
      - name: word-container
        image: ik2227/word:latest@sha256:a32c1a461340d0880693ae1be5580108a24b8fb5b071902a8cb865b02c31a50d
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        startupProbe:
          tcpSocket:
            port: 5000
          periodSeconds: 3
          failureThreshold: 120
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-dply
  namespace: weather-ns
spec:
  selector:
    matchLabels:
      app: weather
  replicas: 1
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - name: weather-container
        image: ik2227/weather:latest@sha256:b69236a70d439acad840ce5cf71e01bff3be6334095e3887765bba68ec81b35e
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        startupProbe:
          tcpSocket:
            port: 5000
          periodSeconds: 3
          failureThreshold: 120
