src/nika/net_env/k8s_lab/shared/deploy_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worddb-dply
  namespace: word-ns
spec:
  selector:
    matchLabels:
      app: worddb
  replicas: 1
  template:
    metadata:
      labels:
        app: worddb
    spec:
      containers:
      - name: worddb-container
        image: postgres:16@sha256:1a6ab3f5345eb6dbe04a1349529caabdb0ab09293a09590fad07b2246bfa4b54
        imagePullPolicy: Never
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command: [pg_isready, -h, 127.0.0.1, -U, root, -d, worddb]
          periodSeconds: 2
        volumeMounts:
        - name: worddb
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: worddb
        persistentVolumeClaim:
          claimName: worddb-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherdb-dply
  namespace: weather-ns
spec:
  selector:
    matchLabels:
      app: weatherdb
  replicas: 1
  template:
    metadata:
      labels:
        app: weatherdb
    spec:
      containers:
      - name: weatherdb-container
        image: postgres:16@sha256:1a6ab3f5345eb6dbe04a1349529caabdb0ab09293a09590fad07b2246bfa4b54
        imagePullPolicy: Never
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command: [pg_isready, -h, 127.0.0.1, -U, root, -d, weatherdb]
          periodSeconds: 2
        volumeMounts:
        - name: weatherdb
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: weatherdb
        persistentVolumeClaim:
          claimName: weatherdb-pvc
